Added onclick navigation

--- a/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/app/src/main/res/layout/fragment_forgot_password.xml
@@ -5,6 +5,7 @@
     android:background="#FFF"
     android:gravity="center_horizontal"
     android:orientation="vertical"
+    android:focusableInTouchMode="true"
     android:padding="32dp">
 
     <ImageView
@@ -64,7 +65,7 @@
             android:paddingStart="40dp"
             android:text="@string/reset_password"
             android:textAllCaps="false"
-            android:textColor="#FFF" />
+            android:textColor="#2863A5" />
     </LinearLayout>
 
 </RelativeLayout>
