--- a/app/src/main/res/layout/fragment_onboarding_email_input.xml
+++ b/app/src/main/res/layout/fragment_onboarding_email_input.xml
@@ -33,20 +33,20 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="serif"
-        android:textColorHint="@color/colorPrimary"
+        android:layout_marginTop="96dp"
+        android:fontFamily="sans-serif-light"
         android:text="@string/onboarding_email_text"
-        android:textAlignment="center"
+        android:textAlignment="textStart"
         android:textAllCaps="false"
         android:textColor="@color/colorAccent"
+        android:textColorHint="@color/colorPrimary"
         android:textSize="18sp"
+        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        android:layout_marginTop="96dp"
-        tools:layout_constraintLeft_creator="1"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintHorizontal_bias="0.503" />
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintTop_creator="1" />
 
 </android.support.constraint.ConstraintLayout>
