--- a/app/src/main/res/layout/activity_onboarding_fragment.xml
+++ b/app/src/main/res/layout/activity_onboarding_fragment.xml
@@ -19,7 +19,7 @@
     </android.support.design.widget.AppBarLayout>
 
     <FrameLayout
-        android:id="@+id/fragment_container"
+        android:id="@+id/fragmentContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="56dp" />
