--- a/app/src/main/res/drawable/ic_forgot_password.xml
+++ b/app/src/main/res/drawable/ic_forgot_password.xml
@@ -1,6 +1,9 @@
-<vector android:height="24dp" android:viewportHeight="489.4"
-    android:viewportWidth="489.4" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#2863A5" android:pathData="M292.3,372.7h166.9v107.6h-166.9z"/>
-    <path android:fillColor="#FF000000" android:pathData="M428.9,257.2c4.8,1.5 9.9,-1.1 11.4,-5.9c6,-18.8 9,-38.4 9,-58.4c0,-106.4 -86.5,-192.9 -192.9,-192.9c-28.8,0 -56.6,6.2 -82.4,18.5c-67.9,31.4 -111.7,100 -111.7,174.7v28.3l-36.4,69.5c-6,11.5 -6.4,23.2 -1,32.1s15.9,14 28.9,14h8.5V396c0,26.3 21.4,47.7 47.7,47.7c0.4,0 0.9,0 1.3,-0.1l42.7,-6.3l0.1,43c0,5 4.1,9.1 9.1,9.1l0,0c5,0 9.1,-4.1 9.1,-9.1l-0.1,-53.5c0,-2.6 -1.2,-5.1 -3.1,-6.9c-2,-1.7 -4.6,-2.5 -7.2,-2.1l-52.3,7.8c-16,-0.3 -29,-13.5 -29,-29.6v-68c0,-5 -4.1,-9.1 -9.1,-9.1h-17.7c-6.5,0 -11.3,-1.9 -13.4,-5.3c-2,-3.4 -1.5,-8.6 1.5,-14.3l37.5,-71.5c0.7,-1.3 1,-2.7 1,-4.2v-30.5c0,-67.7 39.7,-129.8 101.1,-158.3c23.5,-11.1 48.6,-16.7 74.7,-16.7c96.4,0 174.8,78.4 174.8,174.8c0,18 -2.7,35.8 -8.1,52.9C421.4,250.6 424.1,255.7 428.9,257.2z"/>
-    <path android:fillColor="#FF000000" android:pathData="M468.3,480.3V372.7c0,-5 -4.1,-9.1 -9.1,-9.1h-21.6v-32.4c0,-34.1 -27.8,-61.9 -61.9,-61.9s-61.9,27.8 -61.9,61.9v32.4h-21.6c-5,0 -9.1,4.1 -9.1,9.1v107.6c0,5 4.1,9.1 9.1,9.1h166.9C464.2,489.4 468.3,485.3 468.3,480.3zM332,331.2c0,-24.1 19.6,-43.8 43.8,-43.8s43.8,19.6 43.8,43.8v32.4h-87.5v-32.4H332zM450.1,471.3h-148.7v-89.6h148.7V471.3L450.1,471.3z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+        android:width="24dp"
+        android:height="24dp"
+        android:viewportWidth="24.0"
+        android:viewportHeight="24.0">
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M18,8h-1L17,6c0,-2.76 -2.24,-5 -5,-5S7,3.24 7,6v2L6,8c-1.1,0 -2,0.9 -2,2v10c0,1.1 0.9,2 2,2h12c1.1,0 2,-0.9 2,-2L20,10c0,-1.1 -0.9,-2 -2,-2zM12,17c-1.1,0 -2,-0.9 -2,-2s0.9,-2 2,-2 2,0.9 2,2 -0.9,2 -2,2zM15.1,8L8.9,8L8.9,6c0,-1.71 1.39,-3.1 3.1,-3.1 1.71,0 3.1,1.39 3.1,3.1v2z"/>
 </vector>
