--- a/app/src/main/res/drawable/rounded_button.xml
+++ b/app/src/main/res/drawable/rounded_button.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <stroke
+    <solid
         android:width="2dp"
-        android:color="@color/colorPrimary">
-    </stroke>
+        android:color="#FFFFFF">
+    </solid>
     <corners
         android:radius="250dp">
     </corners>
