--- a/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/app/src/main/res/layout/fragment_forgot_password.xml
@@ -1,32 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFF"
-    android:gravity="center_horizontal"
-    android:orientation="vertical"
-    android:focusableInTouchMode="true"
-    android:padding="32dp">
+    android:background="@color/white"
+    android:fitsSystemWindows="true">
+
+    <ImageButton
+        android:id="@+id/button_cancel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top|start"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:background="@android:color/transparent"
+        android:src="@drawable/ic_close" />
 
     <ImageView
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_above="@+id/forgot_password_layout"
-        android:layout_centerHorizontal="true"
+        android:layout_gravity="top|center_horizontal"
+        android:layout_marginTop="84dp"
         android:src="@drawable/ic_forgot_password" />
 
     <LinearLayout
-        android:id="@id/forgot_password_layout"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:orientation="vertical">
+        android:layout_gravity="center"
+        android:orientation="vertical"
+        android:padding="16dp">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:fontFamily="sans-serif-light"
+            android:gravity="center"
             android:text="@string/forgot_your_password"
             android:textColor="#000"
             android:textSize="28sp" />
@@ -39,33 +47,33 @@
             android:gravity="center"
             android:text="@string/forgot_password_info" />
 
-        <android.support.design.widget.TextInputLayout
+        <EditText
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:textColorHint="#A2A2A2">
-
-            <android.support.design.widget.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="sans-serif-light"
-                android:hint="@string/email"
-                android:textColor="#000"
-                android:textColorHint="#a2a2a2" />
-
-        </android.support.design.widget.TextInputLayout>
+            android:layout_height="56dp"
+            android:layout_gravity="top"
+            android:layout_marginTop="24dp"
+            android:background="@drawable/rect_rounded_corners_stroke"
+            android:drawableEnd="@drawable/ic_mail"
+            android:fontFamily="sans-serif-light"
+            android:hint="Email"
+            android:inputType="text"
+            android:paddingEnd="16dp"
+            android:paddingStart="16dp"
+            android:textSize="16sp" />
 
         <Button
-            style="@style/Base.Widget.AppCompat.Button.Borderless"
+            android:id="@+id/button_facebook"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:background="@drawable/rounded_button"
-            android:paddingEnd="40dp"
-            android:paddingStart="40dp"
-            android:text="@string/reset_password"
+            android:layout_height="56dp"
+            android:layout_marginTop="24dp"
+            android:background="@drawable/rect_rounded_corners_solid"
+            android:backgroundTint="@color/colorAccent"
+            android:fontFamily="sans-serif-light"
+            android:text="Reset password"
             android:textAllCaps="false"
-            android:textColor="#2863A5" />
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:textStyle="bold" />
     </LinearLayout>
 
-</RelativeLayout>
+</FrameLayout>
