--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#2863A5</color>
-    <color name="colorPrimaryDark">#2863A5</color>
-    <color name="colorAccent">#2863A5</color>
+    <color name="colorPrimary">#FFFFFF</color>
+    <color name="colorPrimaryDark">#000000</color>
+    <color name="colorAccent">#000000</color>
+
+    <color name="pink">#E7305E</color>
+    <color name="white">#FFFFFF</color>
 </resources>
