--- a/app/src/main/res/drawable/gradient.xml
+++ b/app/src/main/res/drawable/gradient.xml
@@ -4,7 +4,7 @@
     <item>
         <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
 
-            <gradient android:angle="270" android:endColor="#000000" android:startColor="#434343" />
+            <gradient android:angle="270" android:endColor="#000000" android:startColor="@color/colorAccent" />
 
         </shape>
     </item>
