--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -60,7 +60,7 @@
             android:textSize="16sp" />
 
         <Button
-            android:id="@+id/button_facebook"
+            android:id="@+id/loginButton"
             android:layout_width="match_parent"
             android:layout_height="56dp"
             android:layout_marginTop="32dp"
