--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,10 +2,11 @@
 <resources>
 
     <color name="colorPrimary">#FFFFFF</color>
-    <color name="colorPrimaryDark">#000000</color>
-    <color name="colorAccent">#000000</color>
+    <color name="colorPrimaryDark">#3C3B3A</color>
+    <color name="colorAccent">#3C3B3A</color>
 
     <color name="pink">#E7305E</color>
     <color name="white">#FFFFFF</color>
+    <color name="grey">#EDEDED</color>
 
 </resources>
