Added navigation drawer files/ exercise fragments

--- a/app/src/main/res/layout/fragment_startup.xml
+++ b/app/src/main/res/layout/fragment_startup.xml
@@ -5,20 +5,18 @@
     android:background="@color/white"
     android:orientation="vertical">
 
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
     <ImageView
         android:id="@+id/img_sign_up"
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:scaleType="fitCenter"
-        android:layout_marginTop="28dp"
         android:src="@drawable/img_sign_up" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="56dp"
-        android:orientation="vertical">
 
         <TextView
             android:layout_width="match_parent"
@@ -42,9 +40,9 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:background="@drawable/rect_rounded_corners_solid"
+            android:backgroundTint="#d34836"
             android:fontFamily="sans-serif-light"
             android:text="Connect with Google+"
-            android:backgroundTint="#d34836"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textSize="16sp"
@@ -83,38 +81,17 @@
 
     </LinearLayout>
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/loginButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:orientation="vertical">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:fontFamily="sans-serif-light"
-            android:gravity="center"
-            android:text="Already have an account"
-            android:textColor="@color/colorAccent"
-            android:textSize="14sp"
-            android:textStyle="bold" />
-
-        <Button
-            android:id="@+id/LoginButton"
-            android:layout_width="match_parent"
-            android:layout_height="56dp"
-            android:layout_marginBottom="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="12dp"
-            android:background="@drawable/rect_rounded_corners_stroke"
-            android:fontFamily="sans-serif-light"
-            android:text="Log in"
-            android:textAllCaps="false"
-            android:textColor="@color/colorAccent"
-            android:textSize="16sp"
-            android:textStyle="bold" />
-    </LinearLayout>
+        android:layout_marginBottom="16dp"
+        android:fontFamily="sans-serif-light"
+        android:gravity="center"
+        android:text="Already have an account?"
+        android:textColor="@color/colorAccent"
+        android:textSize="14sp"
+        android:textStyle="bold" />
 
 </FrameLayout>
