Made views for register and animations

--- a/app/src/main/res/layout/fragment_onboarding_email_input.xml
+++ b/app/src/main/res/layout/fragment_onboarding_email_input.xml
@@ -9,7 +9,7 @@
         android:layout_height="match_parent">
 
         <EditText
-            android:id="@+id/editText"
+            android:id="@+id/emailInputEditText"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
@@ -39,6 +39,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="96dp"
             android:fontFamily="sans-serif-light"
             android:gravity="start"
