implemented review feedback

--- a/app/src/main/res/layout/fragment_onboarding_password_input.xml
+++ b/app/src/main/res/layout/fragment_onboarding_password_input.xml
@@ -27,7 +27,7 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView"
+            app:layout_constraintTop_toBottomOf="@+id/passwordTextView"
             app:layout_constraintVertical_bias="0.162"
             tools:layout_constraintBottom_creator="1"
             tools:layout_constraintLeft_creator="1"
@@ -35,7 +35,7 @@
             tools:layout_constraintTop_creator="1" />
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/passwordTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
