--- a/app/src/main/res/layout/fragment_onboarding_birth_date_input.xml
+++ b/app/src/main/res/layout/fragment_onboarding_birth_date_input.xml
@@ -27,7 +27,7 @@
             tools:targetApi="lollipop" />
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/birthDateTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
@@ -46,7 +46,6 @@
             tools:layout_constraintLeft_creator="1"
             tools:layout_constraintRight_creator="1"
             tools:layout_constraintTop_creator="1" />
-
 
     </android.support.constraint.ConstraintLayout>
 
