--- a/app/src/main/res/layout/fragment_onboarding_name_input.xml
+++ b/app/src/main/res/layout/fragment_onboarding_name_input.xml
@@ -10,7 +10,7 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/nameTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
@@ -45,7 +45,7 @@
             tools:layout_constraintLeft_creator="1"
             tools:layout_constraintTop_creator="1"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView"
+            app:layout_constraintTop_toBottomOf="@+id/nameTextView"
             app:layout_constraintVertical_bias="0.16"
             android:layout_marginStart="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -68,7 +68,7 @@
             app:layout_constraintLeft_toRightOf="@+id/firstNameInputEditText"
             android:layout_marginLeft="32dp"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView"
+            app:layout_constraintTop_toBottomOf="@+id/nameTextView"
             app:layout_constraintVertical_bias="0.161"
             android:layout_marginStart="32dp" />
 
