Finalize designs schedule creation
Finalize the designs for schedule creation.
Includes a list item for work outs to be displayed on the schedule
creation view, and a schedule creation view.

--- a/app/src/main/res/layout/list_item_workout.xml
+++ b/app/src/main/res/layout/list_item_workout.xml
@@ -27,13 +27,11 @@
             tools:text="@string/workout_name" />
 
         <TextView
-            android:id="@+id/info_text"
+            android:id="@+id/descriptionTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-light"
-            android:textAllCaps="true"
-            tools:text="Chest" />
-
+            tools:text="Workout description" />
     </LinearLayout>
 
     <ImageView
