added list items for schedule workouts

--- a/app/src/main/res/layout/fragment_onboarding_password_input.xml
+++ b/app/src/main/res/layout/fragment_onboarding_password_input.xml
@@ -19,7 +19,7 @@
             android:layout_marginTop="8dp"
             android:ems="10"
             android:gravity="start"
-            android:hint=""
+            android:hint="@string/onboarding_password_hint"
             android:inputType="textPassword"
             android:textAlignment="textStart"
             android:textColor="@color/colorAccent"
