--- a/app/src/main/res/layout/fragment_schedule_detail_view_workout_list_item.xml
+++ b/app/src/main/res/layout/fragment_schedule_detail_view_workout_list_item.xml
@@ -14,7 +14,7 @@
         android:layout_height="40dp"
         android:layout_centerVertical="true"
         android:scaleType="fitCenter"
-        app:srcCompat="@drawable/bench_press" />
+        app:srcCompat="@drawable/ic_exercises" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -35,7 +35,7 @@
             android:textAllCaps="true"
             android:textColor="#3C3B3A"
             android:textStyle="bold"
-            tools:text="Bench Press" />
+            tools:text="WORKOUT NAME" />
 
         <TextView
             android:id="@+id/exerciseListItemInfoTextView"
@@ -43,7 +43,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-light"
             android:textAllCaps="true"
-            tools:text="Chest" />
+            tools:text="12-12-2017" />
 
     </LinearLayout>
 
