--- a/app/src/main/res/layout/fragment_add_workout.xml
+++ b/app/src/main/res/layout/fragment_add_workout.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent"
+    android:background="@color/grey">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -34,7 +35,7 @@
                 android:fontFamily="sans-serif-light"
                 android:hint="Name"
                 android:maxLines="1"
-                android:textSize="14sp" />
+                android:textSize="16sp" />
 
             <EditText
                 android:id="@+id/addWorkoutDescriptionEditText"
@@ -43,7 +44,7 @@
                 android:fontFamily="sans-serif-light"
                 android:hint="@string/description"
                 android:maxLines="4"
-                android:textSize="14sp" />
+                android:textSize="16sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -76,10 +77,10 @@
             style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/white"
+            android:background="@color/accent"
             android:text="@string/add_exercise"
             android:layout_marginTop="16dp"
-            android:textColor="@color/colorAccent" />
+            android:textColor="@color/white" />
 
     </LinearLayout>
 </ScrollView>
