--- a/app/src/main/res/layout/list_item_exercise.xml
+++ b/app/src/main/res/layout/list_item_exercise.xml
@@ -53,6 +53,6 @@
         android:layout_height="20dp"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
-        android:src="@drawable/ic_arrow_right"
+        android:src="@drawable/ic_arrow_right_small_black"
         android:layout_alignParentRight="true" />
 </RelativeLayout>
