--- a/app/src/main/res/layout/fragment_onboarding_forgot_password.xml
+++ b/app/src/main/res/layout/fragment_onboarding_forgot_password.xml
@@ -5,14 +5,12 @@
     android:background="@color/white"
     android:fitsSystemWindows="true">
 
-
     <ImageView
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_gravity="top|center_horizontal"
         android:layout_marginTop="56dp"
-        android:src="@drawable/ic_fitness" />
-
+        android:src="@drawable/ic_lock_black" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -27,9 +25,17 @@
             android:layout_marginTop="32dp"
             android:fontFamily="sans-serif-light"
             android:gravity="center"
-            android:text="@string/login"
+            android:text="@string/forgot_your_password"
             android:textColor="#000"
             android:textSize="28sp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:fontFamily="sans-serif-light"
+            android:gravity="center"
+            android:text="@string/forgot_password_info" />
 
         <EditText
             android:layout_width="match_parent"
@@ -37,54 +43,27 @@
             android:layout_gravity="top"
             android:layout_marginTop="24dp"
             android:background="@drawable/rect_rounded_corners_stroke"
-            android:drawableEnd="@drawable/ic_person"
+            android:drawableEnd="@drawable/ic_mail_black"
             android:fontFamily="sans-serif-light"
-            android:hint="Username"
-            android:inputType="text"
-            android:paddingEnd="16dp"
-            android:paddingStart="16dp"
-            android:textSize="16sp" />
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="56dp"
-            android:layout_gravity="top"
-            android:layout_marginTop="12dp"
-            android:background="@drawable/rect_rounded_corners_stroke"
-            android:drawableEnd="@drawable/ic_lock"
-            android:fontFamily="sans-serif-light"
-            android:hint="Password"
+            android:hint="Email"
             android:inputType="text"
             android:paddingEnd="16dp"
             android:paddingStart="16dp"
             android:textSize="16sp" />
 
         <Button
-            android:id="@+id/loginButton"
+            android:id="@+id/button_facebook"
             android:layout_width="match_parent"
             android:layout_height="56dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="24dp"
             android:background="@drawable/rect_rounded_corners_solid"
             android:backgroundTint="@color/colorAccent"
             android:fontFamily="sans-serif-light"
-            android:text="Log in"
+            android:text="Reset password"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textSize="16sp"
             android:textStyle="bold" />
     </LinearLayout>
-
-
-    <TextView
-        android:id="@+id/having_trouble"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|center_horizontal"
-        android:layout_marginBottom="24dp"
-        android:fontFamily="sans-serif-light"
-        android:text="Having trouble?"
-        android:textColor="@color/colorAccent"
-        android:textSize="14sp"
-        android:textStyle="bold" />
 
 </FrameLayout>
