--- a/app/src/main/res/layout/fragment_schedule_list.xml
+++ b/app/src/main/res/layout/fragment_schedule_list.xml
@@ -20,7 +20,7 @@
 
     <android.support.design.widget.FloatingActionButton xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/fab"
+        android:id="@+id/fabAddSchedule"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
