--- a/app/src/main/res/layout/list_item_exercise_in_workout.xml
+++ b/app/src/main/res/layout/list_item_exercise_in_workout.xml
@@ -14,7 +14,7 @@
         android:layout_height="40dp"
         android:layout_centerVertical="true"
         android:scaleType="fitCenter"
-        app:srcCompat="@drawable/ic_exercises" />
+        app:srcCompat="@drawable/bench_press" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -23,9 +23,7 @@
         android:layout_marginStart="16dp"
         android:layout_toEndOf="@id/icon_image"
         android:gravity="center_vertical"
-        android:orientation="vertical"
-        android:layout_marginLeft="16dp"
-        android:layout_toRightOf="@id/icon_image">
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/exerciseListItemTitleTextView"
@@ -35,7 +33,7 @@
             android:textAllCaps="true"
             android:textColor="#3C3B3A"
             android:textStyle="bold"
-            tools:text="WORKOUT NAME" />
+            tools:text="Bench Press" />
 
         <TextView
             android:id="@+id/exerciseListItemInfoTextView"
@@ -43,16 +41,14 @@
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-light"
             android:textAllCaps="true"
-            tools:text="12-12-2017" />
+            tools:text="Chest" />
 
     </LinearLayout>
 
     <ImageView
-        android:id="@+id/beacon_action_button"
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
-        android:src="@drawable/ic_arrow_right"
-        android:layout_alignParentRight="true" />
+        android:src="@drawable/ic_check_box_black" />
 </RelativeLayout>
