Start implementing MVP
Started on implementing MVP, todo:
- extend the generic viewInterface to add additional functions to be used
  in the fragments.
- Do retrofit stuff with schedules
- Populate the view from a callback.
- Test everything

--- a/app/src/main/res/layout/list_item_schedule.xml
+++ b/app/src/main/res/layout/list_item_schedule.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:padding="16dp"
     tools:layout_editor_absoluteY="81dp"
     tools:layout_editor_absoluteX="0dp">
 
@@ -14,6 +15,7 @@
         android:layout_height="wrap_content"
         android:text="Schedule name placeholder"
         android:textSize="16dp"
+        android:textStyle="bold"
         tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
         android:layout_marginTop="8dp"
