--- a/app/src/main/res/layout/fragment_schedule_list.xml
+++ b/app/src/main/res/layout/fragment_schedule_list.xml
@@ -7,14 +7,15 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/scheduleList"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1">
+        tools:layout_constraintRight_creator="1"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp">
 
     </android.support.v7.widget.RecyclerView>
 
@@ -30,6 +31,7 @@
         android:src="@drawable/ic_add_white"
         app:backgroundTint="?attr/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginEnd="16dp" />
 
 </android.support.constraint.ConstraintLayout>
